--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^5.12.7",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "ws": "^7.4.5"
   }
 }
